# acroface-submission

./: .gitignore  README.md  pyproject.toml
acroface/: train.py  util.py
acroface/dataset/: core.py  face.py  preprocess.py  resample.py
acroface/evaluation/: performance.py
acroface/experiment/: core.py  hyperparameters.py  tracker.py
acroface/models/: batch_trained.py  bisenet.py  densenet.py  farl.py  inception.py  minibatch_trainer.py  resnet.py  sixdrepnet.py  torch_model.py  wrapper.py
analysis/: analysis_config.py  collate_ml_predictions.py  create_venn_diagrams.py  make_barcharts.py  make_bootstrap_statistics.py  make_individual_performance_tables.py  make_performance_table.py  make_roc_curves.py  make_subgroup_bootstrap_statistics.py  make_subgroup_performance_tables.py  plot_roc_curves.py
configs/: densenet_experiment_pretrain_20hp.py  farl_experiment_pretrain_10hp.py  inceptionv3_experiment_pretrain_20hp.py  resnet_experiment_pretrain_20hp.py
configs/datasets/acroface/: acroface_ml.py
configs/models/: densenet_classifier_pretrain.py  farl_classifier_pretrain.py  inceptionv3_classifier_pretrain.py  resnet_classifier_pretrain.py
configs/preprocess/: 9_degree_yaw_dataset.py  three_yaw_dataset.py
scripts/: continue_experiment.py  pad_example_data.py  preprocess_data.py  remove_alpha_channel.py  run_experiment.py  setup_data_splits.py
